<?xml version="1.0"?>
<package>
  <name>test_ros_action</name>
  <version>0.0.0</version>
  <description>The test_ros_action package</description>
  <maintainer email="kate.brighteyes@gmail.com">Kate</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
